crates/bitnet-kernels/tests/snapshots/opencl_snapshot_tests__config_snapshots__device_constraints_a770_defaults.snap
---
source: crates/bitnet-kernels/tests/opencl_snapshot_tests.rs
expression: dc
---
DeviceConstraints {
    max_workgroup_size: 1024,
    max_local_memory: 65536,
    subgroup_sizes: [
        8,
        16,
        32,
    ],
    has_fp16: true,
    has_int8_dot: true,
    compute_units: 32,
}
