crates/bitnet-kernels/tests/snapshots/opencl_snapshot_tests__config_snapshots__i2s_packed_format_default.snap
---
source: crates/bitnet-kernels/tests/opencl_snapshot_tests.rs
expression: fmt
---
I2sPackedFormat {
    values_per_byte: 4,
    bits_per_value: 2,
}
