crates/bitnet-kernels/tests/snapshots/opencl_snapshot_tests__config_snapshots__opencl_context_config_default.snap
---
source: crates/bitnet-kernels/tests/opencl_snapshot_tests.rs
expression: cfg
---
OpenClContextConfig {
    platform_index: 0,
    device_index: 0,
    enable_profiling: true,
    enable_out_of_order: false,
    kernel_cache_dir: None,
}
