crates/bitnet-kernels/tests/snapshots/opencl_snapshot_tests__config_snapshots__pipeline_config_total_parameters_estimate.snap
---
source: crates/bitnet-kernels/tests/opencl_snapshot_tests.rs
expression: "format!(\"total_params={}\", cfg.total_parameters_estimate())"
---
total_params=1364297728
