crates/bitnet-kernels/tests/snapshots/opencl_snapshot_tests__config_snapshots__pipeline_config_validation_error_zero_layers.snap
---
source: crates/bitnet-kernels/tests/opencl_snapshot_tests.rs
expression: err.to_string()
---
invalid pipeline config: num_layers must be > 0
