crates/bitnet-kernels/tests/snapshots/opencl_snapshot_tests__config_snapshots__work_size_1d_1024_elements.snap
---
source: crates/bitnet-kernels/tests/opencl_snapshot_tests.rs
expression: res
---
WorkSizeResult {
    global_work_size: [
        1024,
    ],
    local_work_size: Some(
        [
            256,
        ],
    ),
    total_work_items: 1024,
    total_work_groups: 4,
    efficiency: 1.0,
}
